# pirple

./: .gitignore  CMakeLists.txt
cpp-for-the-rest-of-us/assignments/: CMakeLists.txt
cpp-for-the-rest-of-us/assignments/basic-input-and-output/: main.cpp
cpp-for-the-rest-of-us/assignments/conventions-and-operators/: main.cpp
cpp-for-the-rest-of-us/assignments/data-types-and-variables/: CMakeLists.txt  main.cpp
cpp-for-the-rest-of-us/assignments/engine/: main.cpp
cpp-for-the-rest-of-us/assignments/getting-to-know-your-ide/: CMakeLists.txt  main.cpp
cpp-for-the-rest-of-us/assignments/statements-switches-and-loops/: main.cpp
cpp-for-the-rest-of-us/assignments/tic-tac-toe/: main.cpp
cpp-for-the-rest-of-us/count-sort/: main.cpp
cpp-for-the-rest-of-us/threads/: main.cpp
fundamentals-of-java/assignments/: .gitignore
fundamentals-of-java/assignments/AdvancedOOP/: build.gradle  settings.gradle
fundamentals-of-java/assignments/BasicDataTypes/: build.gradle  settings.gradle
fundamentals-of-java/assignments/BasicOOP/: build.gradle  settings.gradle
fundamentals-of-java/assignments/ControlFlow/: build.gradle
fundamentals-of-java/assignments/DataStructures/: build.gradle
fundamentals-of-java/assignments/Functions/: build.gradle
fundamentals-of-java/assignments/HelloWorld/: build.gradle
python-is-easy/assignments/advanced-loops/: main.py
python-is-easy/assignments/basic-loops/: main.py
python-is-easy/assignments/blackjack/: blackjack.py  main.py
python-is-easy/assignments/classes/: main.py
python-is-easy/assignments/connect4/: main.py
(+27 files in other folders)
